Changed version to 1.3.7 Fixed an issue with overwrite in settings Fixed an issue with parent to children removal in monitor tree view Improved rendering of items and alterantes now more contrast

--- a/resources/App.css
+++ b/resources/App.css
@@ -293,7 +293,7 @@ QTreeView
 
 QTreeView::item {
     height: 20px;
-    background: hsl(220, 30%, 10%);
+    background: hsl(220, 30%, 8%);
 }
 
 QTreeView::item:alternate {
